<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".actividades.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/regLblTitulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regTxtNombre"
                android:inputType="text"
                android:maxLength="100"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regTxtApellido"
                android:inputType="text"
                android:maxLength="100"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regTxtDni"
                android:inputType="number"
                android:maxLength="8"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regtxtCelular"
                android:inputType="number"
                android:maxLength="9"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/regCboDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/imput"
            android:entries="@array/Distrito"
            android:paddingVertical="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/regTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regTxtCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="80"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/regTxtContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/regTxtContra"
                android:inputType="textPassword"
                android:maxLength="50"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/regTxtContra2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regTxtContra2"
                android:inputType="textPassword"
                android:maxLength="50"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/regChkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regTxtTerminos"
            tools:ignore="deprecated" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/regBtnCrear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/marron"
                android:text="@string/regBtnCrear"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/regBtnRegresar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/marron"
                android:text="@string/regBtnRegresar"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>