<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".actividades.SesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="55dp"
            android:src="@drawable/logo2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/logTxtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtUsuario"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/black">
            <EditText
                android:id="@+id/logTxtContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logTxtContra"
                android:inputType="textPassword"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <!-- Botón Ingresar -->
            <Button
                android:id="@+id/logBtnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/marron"
                android:text="@string/logBtnIngresar"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white" />
            <!-- Botón Salir -->
            <Button
                android:id="@+id/logBtnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/marron"
                android:text="@string/logBtnSalir"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/logChxRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logChxRecordar"/>

        <TextView
            android:id="@+id/logLblOlvidoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/logLblOlvidoC"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingBottom="20dp"
            android:clickable="true"
            android:focusable="true"/>
        <Button
            android:id="@+id/logBtnRegistrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F16713"
            android:textColor="#000000"
            android:text="@string/logBtnRegistrate"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/logLblDerechos"
            android:textColor="@color/barra" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>