<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".actividades.EditarPerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEditarPerfil"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">
            <EditText
                android:id="@+id/lblEditNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditNombres"
                android:inputType="text"
                android:maxLength="100"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">
            <EditText
                android:id="@+id/lblEditApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditApellidos"
                android:inputType="text"
                android:maxLength="100"
                android:backgroundTint="@color/imput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">
            <EditText
                android:id="@+id/lblEditDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditDocumento"
                android:inputType="number"
                android:maxLength="8"
                android:backgroundTint="@color/imput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">
            <EditText
                android:id="@+id/lblEditTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditTelefono"
                android:inputType="number"
                android:maxLength="9"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/cmbDistrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/imput"
            android:entries="@array/Distrito"
            android:paddingVertical="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp">
            <EditText
                android:id="@+id/lblEditCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditCorreo"
                android:inputType="textEmailAddress"
                android:maxLength="80"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/lblEditContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditContrasena"
                android:inputType="textPassword"
                android:maxLength="50"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/lblEditConfirmarContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblEditConfirmarContrasena"
                android:inputType="textPassword"
                android:maxLength="50"
                android:backgroundTint="@color/imput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnCancelar"
                android:backgroundTint="@color/marron"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnEditar"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">
        <fragment
            android:id="@+id/frgMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.gato.fragmentos.MenuFragment"
            tools:layout="@layout/fragment_menu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>