<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".actividades.RcpContraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTitulo"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/marron"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="25dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/emoticon_cat"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/txtSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSubtitulo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:fontFamily="sans-serif"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCorreo"
            android:backgroundTint="@color/naranja"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:padding="12dp"
            android:minHeight="48dp"
            android:minWidth="200dp"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTelefono"
            android:textAllCaps="false"
            android:backgroundTint="@color/naranja"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:padding="12dp"
            android:minHeight="48dp"
            android:minWidth="200dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            android:textAllCaps="false"
            android:backgroundTint="#230F04"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:padding="12dp"
            android:minHeight="48dp"
            android:minWidth="200dp"
            android:elevation="4dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>